<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    app:cardCornerRadius="50dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="12dp"
    android:layout_marginBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="59dp"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/dummyweather" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txtDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirteen"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDegreeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/txtDegree"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cel"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtDegree"
                app:layout_constraintStart_toEndOf="@+id/txtDegreeIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>