<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        android:shadowColor="@android:color/black"
        android:text="@string/wednesday"
        android:textColor="@android:color/black"
        android:fontFamily="@font/alumni_s_regular"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/currentWeatherCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/dailyCard"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirteen"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDegreeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/txtDegree"
                app:layout_constraintTop_toTopOf="@+id/txtDegree" />

            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cel"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtDegree"
                app:layout_constraintStart_toEndOf="@+id/txtDegreeIcon" />

            <TextView
                android:id="@+id/skyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/clear"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/txtDegree"
                app:layout_constraintTop_toBottomOf="@+id/txtDegree" />

            <ImageView
                android:id="@+id/imgWeather"
                android:layout_width="115dp"
                android:layout_height="90dp"
                android:src="@drawable/dummyweather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>