<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/alumni"
            android:gravity="center"
            android:text="preferred Temp Unit"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText">


            <RadioButton
                android:id="@+id/firstRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/secondRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelvin"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/firstRadio"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/thirdRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstRadio" />


        </RadioGroup>

        <ImageView
            android:id="@+id/next"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/nav_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleX="-1"
            android:src="@drawable/nav_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/5"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>